tests/negative/traits/method-not-in-impl.orng
trait My_Trait {
    fn f() -> ()

    fn g() -> ()
}

impl My_Trait for Int {
    fn g() -> () { }
}

fn main() -> Int {
    4
}